# Youtube_with_chat

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  style.css
utils/: embeddings.py  fetch_transcript.py  groq_llm.py  llm.py  prompt_template.py  splitter.py  style.py  vector_store.py
